<?xml version="1.0"?>
<package format="2">
  <name>pf_localization</name>
  <version>0.0.0</version>
  <description>Particle filter localization project D1.</description>
  <maintainer email="you@example.com">Sai Kavya</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf</depend>
  <exec_depend>python3-opencv</exec_depend>

  <export/>
</package>
